2003-05-03  Max Horn <max@quendi.de>

	* bootstrap.pl, postinstall.pl.in: Updated x86 case (thanks to bbraun2), and
	  syncing the OS detection code.

2003-05-03  Peter O'Gorman <ogorman@users.sourceforge.net>

	* bootstrap.pl, postinstall.pl.in: Fix bootstrap.

2003-04-15  Ben Hines <bhines@alumni.ucsd.edu>

	* bootstrap.pl, postinstall.pl.in: Recognize Mac OS X 10.2.5.
	
2003-04-05  Ben Hines <benh57@users.sourceforge.net>

	* fink.conf.5.in: Document new mirroring options
	
	* inject.pl: Add MD5 to temp info file.
	
2003-03-11  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.12.1

2003-03-07  Ben Hines <benh57@users.sourceforge.net>

	* AUTHORS: Add some more contributors.
	
	* fink.8.in: Document --ignore-restrictive.
	
2003-03-06  Max Horn  <max@quendi.de>

	* bootstrap.pl: Print more appropriate message when run on x86 Darwin; fix
	  indention.

2003-02-27  Max Horn  <max@quendi.de>

	* fink.in: Fixed typo in help string (it's -h not -H as alias for --help);
	  removed the -? alias for --help.
	
	* fink.in: Removed the copyright notice and the description of what fink
	  is from "fink --help" and added the (updated) copyright notice to
	  "fink --version" where most GNU tools have it.

2003-02-25  Peter O'Gorman <ogorman@users.sourceforge.net>

	* fink.8.in: Some doc for fink list options.

2003-02-21  Max Horn  <max@quendi.de>

	* VERSION: Bumped package manager version to 0.12.0

2003-02-14  Ben Hines <bhines@alumni.ucsd.edu>

	* bootstrap.pl, postinstall.pl.in: Recognize Mac OS X 10.2.4.

2003-01-28  Justin F. Hallett  <thesin@users.sourceforge.net>

	* fink.in: added mention of fink list --help

2003-01-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.11.2

2003-01-15  Finlay Dobbie <finlayd@users.sourceforge.net>

	* fink.conf.5.in: fink.conf manual page.
	
	* bootstrap.pl, inject.pl, install.sh, setup.sh: Install fink.conf
	manual page.
	